--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 store_hash: "w4ocvk8gm9",
                 channel_id: "1",
                 sku: null,
-                token: "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NiJ9.eyJjaWQiOjEsImNvcnMiOlsiaHR0cHM6Ly9hZC5idXlidXR0b24uc3RvcmUiXSwiZWF0IjoyMDAwMDAwMDAwLCJpYXQiOjE3MDI1MDIxMjMsImlzcyI6IkJDIiwic2lkIjoxMDAyNzg3NjY4LCJzdWIiOiJjNXNiNDNjN3Q1OG44a2l2eGlxbDd2a2l1d2E5emlpIiwic3ViX3R5cGUiOjIsInRva2VuX3R5cGUiOjF9.YlT7oWNA3bhlcKZt-rSuf08lVfUYmfZxnHKxe3AvGXsl_9nqq3WBLFfIcSjXPA5G576anNhddVJBjIe-Pwd27w",
+                token: "e1w6vxczalkufy1n9wnkt6bjdkc6gr4",
                 btn_text: 'Buy Now',
                 overlay_text: 'Learn More',
                 bg_color: 'fff',
