--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 store_hash: "w4ocvk8gm9",
                 channel_id: "1",
                 sku: null,
-                token: "e1w6vxczalkufy1n9wnkt6bjdkc6gr4",
+                token: "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NiJ9.eyJjaWQiOjEsImNvcnMiOlsiaHR0cHM6Ly9kZXZlbG9wZXIuYmlnY29tbWVyY2UuY29tIl0sImVhdCI6MTcwMjY3NDg5OSwiaWF0IjoxNzAyNTAyMDk5LCJpc3MiOiJCQyIsInNpZCI6MTAwMjc4NzY2OCwic3ViIjoiQkMiLCJzdWJfdHlwZSI6MCwidG9rZW5fdHlwZSI6MX0.8QZc-bWqhEYnk6xwQl7C98zQDdFt7WZx5clgc7RcgW-QbmvHLM2GJUDQJEM4Wan4is11Z3BXGNz6wZrWvtaXpw",
                 btn_text: 'Buy Now',
                 overlay_text: 'Learn More',
                 bg_color: 'fff',
