--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@ function getProductAndSiteInfo(params) {
 }
 
 function main (){
-    const pageUrl = new URL(window.location);
+    //const pageUrl = new URL(window.location);
+     const pageUrl = "https://kaushikdev.github.io/testbuy";       
     const searchParams = pageUrl.searchParams;
 
     // Fill in supplied URL params
